# spacy-cv-extractor

./: README.md  main.py  pyproject.toml
nlp_model/: .gitignore  README.md  pyproject.toml
nlp_model/src/: app.py
nlp_model/src/services/: ai_services.py
nlp_web/: bun.lockb  package.json
nlp_web/app/: layout.tsx  page.tsx
nlp_web/app/dashboard/: page.tsx
nlp_web/app/login/: page.tsx
nlp_web/app/signup/: page.tsx
src/: app.py
src/dtos/requests/: cv_upload_request.py
src/services/: ai_services.py
